--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -1,6 +1,9 @@
-<Text
-  children={`Hi.`}
-  sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }}
-/>
 
-I'm LekoArts, your theme creator. I'm passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+Keppnisforritunarfélag Íslands var stofnað þann 25. mars 2017 með það markmið að
+rækta samfélag keppnisforritara á Íslandi. Félagið stendur að reglulegum
+fræðslufundum og forritunarkeppnum sem meðlimir geta tekið þátt í. Þar að auki
+sér félagið um þátttöku Íslands í [Ólympíuleikunum í
+forritun](https://ioinformatics.org/), ásamt tilheyrandi undirbúningi og
+þjálfun, sem byrjar með [Forritunarkeppni grunnskólanna](https://kodun.is/) í
+samstarfi við Tækniskólann, og svo [Forritunarkeppni
+framhaldsskólanna](http://forritun.is/) í samstarfi við Háskólann í Reykjavík.
