Implement contest page

--- a/content/pages/keppnir/index.mdx
+++ b/content/pages/keppnir/index.mdx
@@ -3,4 +3,9 @@ title: Keppnir
 slug: "/keppnir"
 ---
 
-Í vinnslu.
+import ContestArchive from '../../../src/components/ContestArchive';
+
+<ContestArchive name="Forritunarkeppni framhaldsskólanna" />
+<ContestArchive name="Forritunarkeppni Háskóla Íslands" />
+<ContestArchive name="Háskólakeppnin í forritun" />
+<ContestArchive name="Vorkeppni HR í forritun" />
