--- a/content/pages/um-felagid/index.mdx
+++ b/content/pages/um-felagid/index.mdx
@@ -20,19 +20,19 @@ framhaldsskólanna](http://forritun.is/) í samstarfi við Háskólann í Reykja
 
 #### Meðstjórnendur
 
-- Bjarki Ágúst Guðmundsson
-- Unnar Freyr Erlendsson
+- Atli Fannar Franklín
+- Samúel Arnar Hafsteinsson
 
 #### Varamenn
 
-- Bernhard Linn Hilmarsson
-- Bjarni Dagur Thor Kárason
-- Samúel Arnar Hafsteinsson
+- Bjarki Ágúst Guðmundsson
+- Dagur Benjamínsson
+- Sigurður Jens Albertsson
 
 Hægt er að hafa samband við stjórn félagsins með því að senda vefpóst á
 [keppnisforritun@gmail.com](mailto:keppnisforritun@gmail.com)
 
-*Stjórn þessi var kosin á [aðalfundi](/2022/05/15/adalfundur-2022) Keppnisforritunarfélags Íslands 28. maí 2022.*
+*Stjórn þessi var kosin á [aðalfundi](/2023/04/13/adalfundur-2023) Keppnisforritunarfélags Íslands 20. apríl 2023.*
 
 ## Lög
 
@@ -103,4 +103,4 @@ Reikningsár félagsins er sama og starfstímabil félagsins. Rekstrarafgangur f
 
 Félagið skal sjá um að kjósa liðsstjóra og varaliðsstjóra fyrir Ólympíulið Íslands í forritun hvers árs, og skal það gert á aðalfundi. Liðsstjóri og varaliðsstjóri þurfa að uppfylla þau skilyrði sem *International Olympiad in Informatics* setur svokölluðum „*team leader*“.
 
-*Lög þessi voru samþykkt á [aðalfundi](/2022/05/15/adalfundur-2022) Keppnisforritunarfélags Íslands 28. maí 2022.*
+*Lög þessi voru samþykkt á [aðalfundi](/2023/04/13/adalfundur-2023) Keppnisforritunarfélags Íslands 20. apríl 2023.*
