NOI 2023: fix typo

--- a/content/posts/2023-05-30-nordurlandaolympiuleikarnir-2023/index.mdx
+++ b/content/posts/2023-05-30-nordurlandaolympiuleikarnir-2023/index.mdx
@@ -7,7 +7,7 @@ tags:
     - Keppnir
 ---
 
-Í ár átti Ísland heiðurinn á að skipuleggja Norðurlanda Ólympíuleikana í Forritun.
+Í ár átti Ísland heiðurinn á að skipuleggja Norðurlandaólympíuleikana í Forritun.
 NOI (Nordic Olympiad in Informatics) 2023 var haldin 22. mars 2023 kl 14:00 - 19:00.
 Keppnin var haldin í gegnum Kattis kerfið.
 Þátttakendur í keppninni voru 66 framhaldsskólanemar frá Danmörku, Finnlandi, Íslandi, Noregi og Svíþjóð.
