--- a/content/posts/2023-05-30-nordurlandaolympiuleikarnir-2023/index.mdx
+++ b/content/posts/2023-05-30-nordurlandaolympiuleikarnir-2023/index.mdx
@@ -13,13 +13,13 @@ Keppnin var haldin í gegnum Kattis kerfið.
 Þátttakendur í keppninni voru 66 framhaldsskólanemar frá Danmörku, Finnlandi, Íslandi, Noregi og Svíþjóð.
 Íslenskir keppendur voru 16 talsins og mættu þeir í Háskólann í Reykjavík þar sem þeir fengu kvöldmat í boði félagsins eftir keppnina.
 
-1.-8. sæti (8 manns) fengu gull medallíu.
-9.-17 sæti (9 manns) fengu silfur medallíu.
-18.-33. sæti (16 manns) fengu brons medallíu.
+- 1.-8. sæti (8 manns) fengu gull medallíu.
+- 9.-17 sæti (9 manns) fengu silfur medallíu.
+- 18.-33. sæti (16 manns) fengu brons medallíu.
 
 Verðlaunahafar Íslands eru:
-Benedikt Vilji Magnússon, sem lenti í 5. sæti og fékk gull medallíu!
-Kirill Zolotuskiy, sem lenti í 25. sæti og fékk brons medallíu!
+- Benedikt Vilji Magnússon, sem lenti í 5. sæti og fékk gull medallíu!
+- Kirill Zolotuskiy, sem lenti í 25. sæti og fékk brons medallíu!
 
 [Niðurstöður](https://noi23.kattis.com/contests/noi23/standings)
 [Keppnisgögn](https://github.com/nordicolympiad/nordic-olympiad-2023)
