Fix formatting for EGOI2023

--- a/content/posts/2023-07-24-evropsku-olympiuleikar-stelpna/index.mdx
+++ b/content/posts/2023-07-24-evropsku-olympiuleikar-stelpna/index.mdx
@@ -30,7 +30,7 @@ Stelpurnar eignuðust vini frá öðrum löndum og tóku einnig þátt í alls k
     <figcaption>Frá vinstri: Frigg, Samúel Arnar, Arnar Bjarni, Eva Natalía, Sólbjört Tinna, Eva Sóllilja</figcaption>
 </figure>
 
-
-[Heimasíða EGOI 2023](https://egoi23.se)
-[Stigatafla](https://egoi23.se/scoreboard)
-[Verkefni](https://open.kattis.com/problem-sources/European%20Girls%27%20Olympiad%20in%20Informatics%202023)
+Hlekkir:
+- [Heimasíða EGOI 2023](https://egoi23.se)
+- [Stigatafla](https://egoi23.se/scoreboard)
+- [Verkefni](https://open.kattis.com/problem-sources/European%20Girls%27%20Olympiad%20in%20Informatics%202023)
