--- a/content/posts/2023-07-24-evropsku-olympiuleikar-stelpna/index.mdx
+++ b/content/posts/2023-07-24-evropsku-olympiuleikar-stelpna/index.mdx
@@ -10,7 +10,7 @@ tags:
 Keppnin EGOI (European Girls' Olympiad in Informatics) 2023 var haldin 15. - 21. júlí 2023 í Lund, Svíþjóð.
 
 Í ár tók Ísland þátt í keppninni í fyrsta sinn.
-Keppnisforritunarfélag íslands hafði samband við framhaldsskólanna á Íslandi í leit að áhugasömum stelpum í byrjun maí.
+Keppnisforritunarfélag Íslands hafði samband við framhaldsskólanna á Íslandi í leit að áhugasömum stelpum í byrjun maí.
 
 Framhaldsskólanemarnir sem kepptu fyrir hönd Íslands voru:
 - Eva Natalía Elvarsdóttir, MA
