Add link to ft.is

--- a/content/posts/2023-09-10-forritunarkeppni-haskolanna-a-islandi-2023/index.mdx
+++ b/content/posts/2023-09-10-forritunarkeppni-haskolanna-a-islandi-2023/index.mdx
@@ -75,7 +75,7 @@ Höfundar verkefnanna voru:
 - Unnar Freyr Erlendsson
 
 Sérstakar þakkir:
-- Félag Tölvunarfræðinga, fyrir að veita verðlaunin
+- [Félag Tölvunarfræðinga](https://ft.is), fyrir að veita verðlaunin
 - Háskólinn í Reykjavík, fyrir að veita húsnæði og fjármagn
 - Kattis, fyrir að hýsa keppnina í kerfinu sínu
 - Bernhard Linn Hilmarson, fyrir að prófa verkefnin og aðstoða á meðan keppnin stóð yfir
