Add contest data link

--- a/content/posts/2023-09-10-forritunarkeppni-haskolanna-a-islandi-2023/index.mdx
+++ b/content/posts/2023-09-10-forritunarkeppni-haskolanna-a-islandi-2023/index.mdx
@@ -57,6 +57,7 @@ Nánari upplýsingar um hana má finna [hér](https://nordic.icpc.io/ncpc2023/).
 
 - [Stigatafla](https://fkhi.kattis.com/https://fkhi.kattis.com/contests/fkhi23/standings/)
 - [Verkefni](https://fkhi.kattis.com/contests/fkhi23/problems)
+- [Keppnisgögn](https://github.com/keppnisforritun/keppnir/tree/main/fkhi/2023)
 
 ---
 
