--- a/content/pages/keppnir/index.mdx
+++ b/content/pages/keppnir/index.mdx
@@ -7,5 +7,6 @@ import ContestArchive from '../../../src/components/ContestArchive';
 
 <ContestArchive name="Forritunarkeppni framhaldsskólanna" />
 <ContestArchive name="Forritunarkeppni Háskóla Íslands" />
+<ContestArchive name="Forritunarkeppni Háskólanna á Íslandi" />
 <ContestArchive name="Háskólakeppnin í forritun" />
 <ContestArchive name="Vorkeppni HR í forritun" />
