--- a/content/posts/2023-09-10-forritunarkeppni-haskolanna-a-islandi-2023/index.mdx
+++ b/content/posts/2023-09-10-forritunarkeppni-haskolanna-a-islandi-2023/index.mdx
@@ -56,7 +56,7 @@ Nánari upplýsingar um hana má finna [hér](https://nordic.icpc.io/ncpc2023/).
 ### Hlekkir
 
 - [Stigatafla](https://fkhi.kattis.com/https://fkhi.kattis.com/contests/fkhi23/standings/)
-- [Verkefni](https://fkhi.kattis.com/contests/fkhi23/problems)
+- [Verkefni](https://open.kattis.com/problem-sources/Forritunarkeppni%20H%C3%A1sk%C3%B3lanna%20%C3%A1%20%C3%8Dslandi%202023)
 - [Keppnisgögn](https://github.com/keppnisforritun/keppnir/tree/main/fkhi/2023)
 
 ---
