Fix snake order

--- a/content/posts/2023-09-10-forritunarkeppni-haskolanna-a-islandi-2023/index.mdx
+++ b/content/posts/2023-09-10-forritunarkeppni-haskolanna-a-islandi-2023/index.mdx
@@ -27,7 +27,7 @@ Meðlimir liðsins voru Kristján Sölvi Örnólfsson, Hallgrímur Haraldsson og
 
 <figure>
     ![](slongurnar.jpg)
-    <figcaption>Frá vinstri: Arnar Bjarni, Hallgrímur, Kristján Sölvi, Viktor Már</figcaption>
+    <figcaption>Frá vinstri: Arnar Bjarni, Hallgrímur, Viktor Már, Kristján Sölvi</figcaption>
 </figure>
 
 Í öðru sæti var liðið &nbsp; frá Háskóla Íslands.
