Uppfæra eftir aðalfund 2024

--- a/content/pages/um-felagid/index.mdx
+++ b/content/pages/um-felagid/index.mdx
@@ -27,7 +27,7 @@ framhaldsskólanna](http://forritun.is/) í samstarfi við Háskólann í Reykja
 
 - Bjarki Ágúst Guðmundsson
 - Dagur Benjamínsson
-- Sigurður Jens Albertsson
+- Konráð Elí Sigurgeirsson
 
 Hægt er að hafa samband við stjórn félagsins með því að senda vefpóst á
 [keppnisforritun@gmail.com](mailto:keppnisforritun@gmail.com)
@@ -103,4 +103,9 @@ Reikningsár félagsins er sama og starfstímabil félagsins. Rekstrarafgangur f
 
 Félagið skal sjá um að kjósa liðsstjóra og varaliðsstjóra fyrir Ólympíulið Íslands í forritun hvers árs, og skal það gert á aðalfundi. Liðsstjóri og varaliðsstjóri þurfa að uppfylla þau skilyrði sem *International Olympiad in Informatics* setur svokölluðum „*team leader*“.
 
-*Lög þessi voru samþykkt á [aðalfundi](/2023/04/13/adalfundur-2023) Keppnisforritunarfélags Íslands 20. apríl 2023.*
+### 13. grein
+
+Félagið skal kjósa háskólakeppnisstjóra á Íslandi fyrir hvert ár, og skal það gert á aðalfundi.
+Háskólakeppnisstjóri sér um að skipuleggja Forritunarkeppni Háskólanna á Íslandi (FKHÍ) og keppnisstaði á Íslandi fyrir Norðurlandakeppnina í Forritun (NCPC) og verður þá skráður sem “site director” fyrir NCPC, ásamt því að ráðleggja um val á liðum fyrir íslensku háskólana sem taka þátt í Norðvestur-Evrópukeppninni (NWERC).
+
+*Lög þessi voru samþykkt á [aðalfundi](/2023/12/14/adalfundur-2024) Keppnisforritunarfélags Íslands 6. janúar 2024.*
