Add Einar and Samuel as candidates 2024-2025

--- a/content/posts/2024-09-09-adalfundur-2024---2025/index.mdx
+++ b/content/posts/2024-09-09-adalfundur-2024---2025/index.mdx
@@ -37,11 +37,13 @@ Engin framboð hafa borist enn.
 
 #### Meðstjórnendur
 
-Engin framboð hafa borist enn.
+- Einar Darri Sveinbjörnsson
+- Samúel Arnar Hafsteinsson
 
 #### Varamenn
 
-Engin framboð hafa borist enn.
+- Einar Darri Sveinbjörnsson
+- Samúel Arnar Hafsteinsson
 
 #### Skoðunarmaður reikninga
 
