--- a/content/posts/2024-09-09-adalfundur-2024---2025/index.mdx
+++ b/content/posts/2024-09-09-adalfundur-2024---2025/index.mdx
@@ -33,15 +33,17 @@ Frambjóðendur, tillögur að lagabreytingum og aðrar tillögur verða settar 
 
 #### Formaður
 
-Engin framboð hafa borist enn.
+- Arnar Bjarni Arnarson
 
 #### Meðstjórnendur
 
+- Arnar Bjarni Arnarson
 - Einar Darri Sveinbjörnsson
 - Samúel Arnar Hafsteinsson
 
 #### Varamenn
 
+- Arnar Bjarni Arnarson
 - Einar Darri Sveinbjörnsson
 - Samúel Arnar Hafsteinsson
 
