Add diff to bylaw changes

--- a/content/posts/2024-09-09-adalfundur-2024---2025/index.mdx
+++ b/content/posts/2024-09-09-adalfundur-2024---2025/index.mdx
@@ -71,13 +71,12 @@ Breyta 7. grein í:
 
 Stjórn félagsins skal skipuð formanni og 2 meðstjórnendum, kjörnum á aðalfundi til eins árs í senn.
 Einnig er heimilt að kjósa allt að 3 varamenn.
-Fyrst er kosið formann, því næst meðstjórnendur, og að lokum varamenn.
-Formaður má hvorki bjóða sig fram sem meðstjórnandi né sem varamaður.
-Meðstjórnendur mega ekki bjóða sig fram sem varamenn.
+**Fyrst er kosið formann, því næst meðstjórnendur og að lokum varamenn.**
+**Einungis er hægt að gegna einni af þessum stöðum.**
 Stjórnarmeðlimir mega ekki vera gjaldgengir keppendur í International Olympiad in Informatics.
 Stjórnin skiptir með sér verkum.
 Stjórn félagsins fer með málefni félagsins milli aðalfunda.
-Formaður boðar til funda eigi síðar en á mánaðar fresti.
+Formaður boðar til funda** eigi síðar en á mánaðar fresti**.
 Firmaritun er í höndum meirihluta stjórnar.
 
 Breytingunni fylgir nákvæmara og strangara orðalag fyrir fundi stjórnar og formlegri skýring á ferli kosninga.
@@ -85,23 +84,24 @@ Rökin eru sú að þetta tryggir virkari og tímanlegri stjórn og eykur samvin
 
 #### Tillaga 2
 
-Breyta 6. grein í:
+Breyta 6. grein í
 
 Aðalfund skal halda eigi síðar en 1. október ár hvert og skal boða til hans með að minnst einnar viku fyrirvara með sannanlegum hætti.
 Aðalfundur er löglegur, sé rétt til hans boðað.
-Notast er við forgangsröðunaraðferðina (Single Transferable Vote) til að ráða úrslitum mála.
+~Einfaldur meirihluti mættra félagsmanna ræður úrslitum mála.~
+**Notast er við forgangsröðunaraðferðina (Single Transferable Vote) til að ráða úrslitum mála.**
 Dagskrá aðalfundar skal vera sem hér segir:
 
-- Kosning fundarstjóra og fundarritara.
-- Skýrsla stjórnar flutt.
-- Endurskoðaðir reikningar lagðir fram til afgreiðslu.
-- Lagabreytingar ef við á.
-- Kosning stjórnarmanna.
-- Kosning skoðunarmanns reikninga.
-- Ákvörðun félagsgjalds.
-- Kosning liðsstjóra og varaliðsstjóra Ólympíuliðs Íslands í forritun.
-- Kosning háskólakeppnisstjóra.
-- Önnur mál.
+1. Kosning fundarstjóra og fundarritara.
+2. Skýrsla stjórnar flutt.
+3. Endurskoðaðir reikningar lagðir fram til afgreiðslu.
+4. Lagabreytingar ef við á.
+5. Kosning stjórnarmanna.
+6. Kosning skoðunarmanns reikninga.
+7. Ákvörðun félagsgjalds.
+8. Kosning liðsstjóra og varaliðsstjóra Ólympíuliðs Íslands í forritun.
+**9. Kosning háskólakeppnisstjóra.**
+**10. Önnur mál.**
 
 Breytingunni fylgir skipting á kosningakerfi og einnig lagfæring á dagskrá aðalfundar eftir lagabreytingu frá því í fyrra um háskólakeppnisstjóra.
 Rökin eru sú að þetta flýtir fyrir kosningum með því að fækka umferðum, er ágætlega einföld aðferð að skilja og einnig er markmið aðferðarinnar að lágmarka sóun atkvæða. Annar valkostur er Schulze aðferðin.
