--- a/content/posts/2024-09-09-adalfundur-2024---2025/index.mdx
+++ b/content/posts/2024-09-09-adalfundur-2024---2025/index.mdx
@@ -100,8 +100,8 @@ Dagskrá aðalfundar skal vera sem hér segir:
 6. Kosning skoðunarmanns reikninga.
 7. Ákvörðun félagsgjalds.
 8. Kosning liðsstjóra og varaliðsstjóra Ólympíuliðs Íslands í forritun.
-**9. Kosning háskólakeppnisstjóra.**
-**10. Önnur mál.**
+9. **Kosning háskólakeppnisstjóra.**
+10. **Önnur mál.**
 
 Breytingunni fylgir skipting á kosningakerfi og einnig lagfæring á dagskrá aðalfundar eftir lagabreytingu frá því í fyrra um háskólakeppnisstjóra.
 Rökin eru sú að þetta flýtir fyrir kosningum með því að fækka umferðum, er ágætlega einföld aðferð að skilja og einnig er markmið aðferðarinnar að lágmarka sóun atkvæða. Annar valkostur er Schulze aðferðin.
