BOI24 image fix

--- a/content/posts/2024-05-10-eystrasaltsolympiuleikarnir-2024/index.mdx
+++ b/content/posts/2024-05-10-eystrasaltsolympiuleikarnir-2024/index.mdx
@@ -25,12 +25,12 @@ Keppendur fóru á tæknisafn og sáu lasersýningu, þar sem var spilað tónli
 Seinna heimsóttu keppendur Trakai kastala og fóru í bátsferð.
 
 <figure>
-    ![](boi2024is.png)
+    ![](boi2024is.jpg)
     <figcaption>Frá vinstri: Samúel Arnar, Frigg, Gunnsteinn Þór, Kristinn Hrafn, Þórhallur, Eva Sóllilja, Moira, Arnar Bjarni</figcaption>
 </figure>
 
 <figure>
-    ![](restaurant.png)
+    ![](restaurant.jpg)
 </figure>
 
 [Heimasíða BOI 2024](https://boi2024.lmio.lt)
