BOI Image fix 2

--- a/content/posts/2024-05-10-eystrasaltsolympiuleikarnir-2024/index.mdx
+++ b/content/posts/2024-05-10-eystrasaltsolympiuleikarnir-2024/index.mdx
@@ -25,7 +25,7 @@ Keppendur fóru á tæknisafn og sáu lasersýningu, þar sem var spilað tónli
 Seinna heimsóttu keppendur Trakai kastala og fóru í bátsferð.
 
 <figure>
-    ![](boi2024is.jpg)
+    ![](boi2024.jpg)
     <figcaption>Frá vinstri: Samúel Arnar, Frigg, Gunnsteinn Þór, Kristinn Hrafn, Þórhallur, Eva Sóllilja, Moira, Arnar Bjarni</figcaption>
 </figure>
 
