--- a/content/posts/2024-09-09-adalfundur-2024---2025/index.mdx
+++ b/content/posts/2024-09-09-adalfundur-2024---2025/index.mdx
@@ -40,12 +40,14 @@ Frambjóðendur, tillögur að lagabreytingum og aðrar tillögur verða settar 
 - Arnar Bjarni Arnarson
 - Einar Darri Sveinbjörnsson
 - Samúel Arnar Hafsteinsson
+- Unnar Freyr Erlendsson
 
 #### Varamenn
 
 - Arnar Bjarni Arnarson
 - Einar Darri Sveinbjörnsson
 - Samúel Arnar Hafsteinsson
+- Unnar Freyr Erlendsson
 
 #### Skoðunarmaður reikninga
 
