Fix about page error regarding when vote happened

--- a/content/pages/um-felagid/index.mdx
+++ b/content/pages/um-felagid/index.mdx
@@ -32,7 +32,7 @@ framhaldsskólanna](http://forritun.is/) í samstarfi við Háskólann í Reykja
 Hægt er að hafa samband við stjórn félagsins með því að senda vefpóst á
 [keppnisforritun@gmail.com](mailto:keppnisforritun@gmail.com)
 
-*Stjórn þessi var kosin á [aðalfundi](/2023/04/13/adalfundur-2023) Keppnisforritunarfélags Íslands 20. apríl 2023.*
+*Stjórn þessi var kosin á [aðalfundi](2023/12/14/adalfundur-2024) Keppnisforritunarfélags Íslands 6. janúar 2024.*
 
 ## Lög
 
