--- a/content/pages/um-felagid/index.mdx
+++ b/content/pages/um-felagid/index.mdx
@@ -25,14 +25,14 @@ framhaldsskólanna](http://forritun.is/) í samstarfi við Háskólann í Reykja
 
 #### Varamenn
 
-- Bjarki Ágúst Guðmundsson
-- Dagur Benjamínsson
+- Unnar Freyr Erlendsson
+- Einar Darri Sveinbjörnsson
 - Konráð Elí Sigurgeirsson
 
 Hægt er að hafa samband við stjórn félagsins með því að senda vefpóst á
 [keppnisforritun@gmail.com](mailto:keppnisforritun@gmail.com)
 
-*Stjórn þessi var kosin á [aðalfundi](2023/12/14/adalfundur-2024) Keppnisforritunarfélags Íslands 6. janúar 2024.*
+*Stjórn þessi var kosin á [aðalfundi](2024/09/19/adalfundur-2024---2025) Keppnisforritunarfélags Íslands 26. september 2024.*
 
 ## Lög
 
@@ -81,7 +81,7 @@ Aðalfund skal halda eigi síðar en 1. október ár hvert og skal boða til han
 
 ### 7. grein
 
-Stjórn félagsins skal skipuð formanni og 2 meðstjórnendum, kjörnum á aðalfundi til eins árs í senn. Einnig er heimilt að kjósa allt að 3 varamenn. Stjórnarmeðlimir mega ekki vera gjaldgengir keppendur í *International Olympiad in Informatics*. Stjórnin skiptir með sér verkum. Stjórn félagsins fer með málefni félagsins milli aðalfunda. Formaður boðar til funda. Firmaritun er í höndum meirihluta stjórnar.
+Stjórn félagsins skal skipuð formanni og 2 meðstjórnendum, kjörnum á aðalfundi til eins árs í senn. Einnig er heimilt að kjósa allt að 3 varamenn. Fyrst er kosið formann, því næst meðstjórnendur og að lokum varamenn. Einungis er hægt að gegna einni af þessum stöðum. Stjórnarmeðlimir mega ekki vera gjaldgengir keppendur í *International Olympiad in Informatics*. Stjórnin skiptir með sér verkum. Stjórn félagsins fer með málefni félagsins milli aðalfunda. Formaður boðar til stjórnarfunda eigi síðar en á þriggja mánaða fresti. Firmaritun er í höndum meirihluta stjórnar.
 
 ### 8. grein
 
