Rearrange the names for FKHI-2024

--- a/content/posts/2024-09-19-forritunarkeppni-haskolanna-a-islandi-2024/index.mdx
+++ b/content/posts/2024-09-19-forritunarkeppni-haskolanna-a-islandi-2024/index.mdx
@@ -44,7 +44,7 @@ Meðlimir liðsins voru Benedikt Vilji Magnússon, Kári Hlynsson og Matthías A
 
 <figure>
     ![](Codebusters.jpg)
-    <figcaption>Frá vinstri: Kári, Matthías Andri, Benedikt Vilji</figcaption>
+    <figcaption>Frá vinstri: Kári, Benedikt Vilji, Matthías Andri</figcaption>
 </figure>
 
 
