--- a/content/posts/2025-08-07-adalfundur-2025---2026/index.mdx
+++ b/content/posts/2025-08-07-adalfundur-2025---2026/index.mdx
@@ -33,15 +33,15 @@ Frambjóðendur, tillögur að lagabreytingum og aðrar tillögur verða settar 
 
 #### Formaður
 
-Engin framboð hafa borist enn.
+- Arnar Bjarni Arnarson
 
 #### Meðstjórnendur
 
-Engin framboð hafa borist enn.
+- Arnar Bjarni Arnarson
 
 #### Varamenn
 
-Engin framboð hafa borist enn.
+- Arnar Bjarni Arnarson
 
 #### Skoðunarmaður reikninga
 
