--- a/content/posts/2024-07-30-evropsku-olympiuleikar-stelpna-2024/index.mdx
+++ b/content/posts/2024-07-30-evropsku-olympiuleikar-stelpna-2024/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Evrópusku Ólympíuleikar Stelpna 2024'
+title: 'Evrópsku Ólympíuleikar Stelpna 2024'
 date: '2024-07-30T06:10:00+00:00'
 slug: /2024/07/30/evropsku-olympiuleikar-stelpna-2024/
 tags:
