--- a/content/posts/2025-08-07-adalfundur-2025---2026/index.mdx
+++ b/content/posts/2025-08-07-adalfundur-2025---2026/index.mdx
@@ -34,14 +34,19 @@ Frambjóðendur, tillögur að lagabreytingum og aðrar tillögur verða settar 
 #### Formaður
 
 - Arnar Bjarni Arnarson
+- Atli Fannar Franklín
 
 #### Meðstjórnendur
 
 - Arnar Bjarni Arnarson
+- Atli Fannar Franklín
+- Samúel Arnar Hafsteinsson
 
 #### Varamenn
 
 - Arnar Bjarni Arnarson
+- Atli Fannar Franklín
+- Samúel Arnar Hafsteinsson
 
 #### Skoðunarmaður reikninga
 
@@ -49,11 +54,11 @@ Engin framboð hafa borist enn.
 
 #### Liðsstjóri
 
-Engin framboð hafa borist enn.
+- Samúel Arnar Hafsteinsson
 
 #### Varaliðsstjóri
 
-Engin framboð hafa borist enn.
+- Samúel Arnar Hafsteinsson
 
 #### Háskólakeppnissstjóri
 
