--- a/content/posts/2025-08-07-adalfundur-2025---2026/index.mdx
+++ b/content/posts/2025-08-07-adalfundur-2025---2026/index.mdx
@@ -58,6 +58,7 @@ Engin framboð hafa borist enn.
 
 #### Varaliðsstjóri
 
+- Frigg Einarsdóttir
 - Samúel Arnar Hafsteinsson
 
 #### Háskólakeppnissstjóri
