--- a/content/posts/2025-08-07-adalfundur-2025---2026/index.mdx
+++ b/content/posts/2025-08-07-adalfundur-2025---2026/index.mdx
@@ -63,7 +63,7 @@ Engin framboð hafa borist enn.
 
 #### Háskólakeppnissstjóri
 
-Engin framboð hafa borist enn.
+- Atli Fannar Franklín
 
 ### Tillögur að lagabreytingum
 
