--- a/content/posts/2025-08-07-adalfundur-2025---2026/index.mdx
+++ b/content/posts/2025-08-07-adalfundur-2025---2026/index.mdx
@@ -40,12 +40,16 @@ Frambjóðendur, tillögur að lagabreytingum og aðrar tillögur verða settar 
 
 - Arnar Bjarni Arnarson
 - Atli Fannar Franklín
+- Einar Darri Sveinbjörnsson
+- Konráð Elí Sigurgeirsson
 - Samúel Arnar Hafsteinsson
 
 #### Varamenn
 
 - Arnar Bjarni Arnarson
 - Atli Fannar Franklín
+- Einar Darri Sveinbjörnsson
+- Konráð Elí Sigurgeirsson
 - Samúel Arnar Hafsteinsson
 
 #### Skoðunarmaður reikninga
