--- a/content/pages/dagatal/index.mdx
+++ b/content/pages/dagatal/index.mdx
@@ -12,8 +12,8 @@ Félagið heldur eða tekur þátt í eftirfarandi atburðum árið 2025:
 - **Eystrasaltsólympíuleikarnir í forritun** - Pólland - 24. - 29. apríl
 - **Evrópsku ólympíuleikar stelpna í forritun** - Bonn, Þýskaland - 14. - 20. júlí
 - [**Alþjóðlegu ólympíuleikarnir í forritun** - La Paz, Bólivía - 27. júlí - 3. ágúst](https://ioi2025.bo/)
-- **Evrópsku ólympíuleikar grunnskólanema í forritun** - staðsetning kemur í ljós seinna - dagsetning kemur í ljós seinna, en líklega í ágúst eða september
-- **Forritunarkeppni háskólanna á Íslandi** - Háskólinn í Reykjavík - áætluð 6. september
-- **Forritunarkeppni háskólanna á norðurlöndunum** - Háskóli Íslands - áætluð 4. október
-- [**Mun kóða fyrir drykki**](https://thorehusfeldt.github.io/wcfd/)
-- **Norðvestur Evrópu háskólakeppnin í forritun** - Karlsruhe, Þýskalandi - áætluð 22. - 23. nóvember
+- **Evrópsku ólympíuleikar grunnskólanema í forritun** - Shumen, Búlgaría - 29. ágúst - 4. september
+- **Forritunarkeppni háskólanna á Íslandi** - Háskólinn í Reykjavík - 13. september
+- **Forritunarkeppni háskólanna á norðurlöndunum** - Háskóli Íslands - 4. október
+- [**Mun kóða fyrir drykki**](https://thorehusfeldt.github.io/wcfd/) - í Nóvember
+- **Norðvestur Evrópu háskólakeppnin í forritun** - Karlsruhe, Þýskalandi - 28. - 30. nóvember
