typo fix egoi 2025

--- a/content/posts/2025-08-12-evropsku-olympiuleikar-stelpna-2025/index.mdx
+++ b/content/posts/2025-08-12-evropsku-olympiuleikar-stelpna-2025/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Evrópusku Ólympíuleikar Stelpna 2025'
+title: 'Evrópsku Ólympíuleikar Stelpna 2025'
 date: '2025-08-12T06:10:00+00:00'
 slug: /2025/08/12/evropsku-olympiuleikar-stelpna-2025/
 tags:
