A little about NWERC problem

--- a/content/posts/2025-12-03-nwerc-2025/index.mdx
+++ b/content/posts/2025-12-03-nwerc-2025/index.mdx
@@ -14,6 +14,19 @@ Keppnin er hluti af alþjóðlegu háskólakeppninni ICPC og fara bestu 13 hásk
 á Evrópsku Meistarakeppnina (e. European Championship). Einnig tryggja bestu tveir
 háskólarnir sér pláss á heimsmeistarakeppnina (e. ICPC World Finals).
 
+Norðvestur-Evrópu háskólakeppnin í forritun er keppni þar sem þriggja nemenda teymi frá
+háskólum um alla Norðvestur-Evrópu takast á við safn reikniritaverkefna.
+Markmið hvers liðs er að leysa eins mörg verkefni og mögulegt er innan fimm klukkustunda
+tímamarka.
+Liðin senda inn mögulegar lausnir sínar í dómnefnd þar sem þær eru sjálfkrafa metnar.
+
+Í ár var eitt íslenskt verkefni samþykkt frá Atla Fannar Franklín.
+Atla var boðið að vera með í dómnefndinni í ár vegna þess.
+Verkefni Atla var um að fá jólaseríu til að vera einlita ef það að fikta í einni peru
+breytir slembið um litastillingu perunnar. Keppendur áttu að reikna hversu margar
+tilraunir það tæki fyrir tiltekna upprunalega litaskiptingu ef besta mögulega aðferð
+væri notuð.
+
 Fyrir hönd Háskólans í Reykjavík fóru:
 - Aleksa Ilic
 - Kristinn Hrafn Daníelsson
