--- a/content/pages/um-felagid/index.mdx
+++ b/content/pages/um-felagid/index.mdx
@@ -25,14 +25,14 @@ framhaldsskólanna](http://forritun.is/) í samstarfi við Háskólann í Reykja
 
 #### Varamenn
 
-- Unnar Freyr Erlendsson
-- Einar Darri Sveinbjörnsson
 - Konráð Elí Sigurgeirsson
+- Dagur Benjamínsson 
+- Eva Natalía Elvarsdóttir 
 
 Hægt er að hafa samband við stjórn félagsins með því að senda vefpóst á
 [keppnisforritun@gmail.com](mailto:keppnisforritun@gmail.com)
 
-*Stjórn þessi var kosin á [aðalfundi](2024/09/09/adalfundur-2024---2025) Keppnisforritunarfélags Íslands 26. september 2024.*
+*Stjórn þessi var kosin á [aðalfundi](2025/08/21/adalfundur-2025---2026) Keppnisforritunarfélags Íslands 21. ágúst 2025.*
 
 ## Lög
 
