Update calendar for 2026

--- a/content/pages/dagatal/index.mdx
+++ b/content/pages/dagatal/index.mdx
@@ -3,17 +3,16 @@ title: Dagatal
 slug: "/dagatal"
 ---
 
-Félagið heldur eða tekur þátt í eftirfarandi atburðum árið 2025:
+Félagið heldur eða tekur þátt í eftirfarandi atburðum árið 2026:
 
-- [**Kynning á UTmesssunni** - Harpan - 7. og 8. febrúar](https://utmessan.is/)
-- [**Forritunarkeppni Grunnskólanna** - Tækniskólinn - febrúar](https://kodun.is/keppni/index.html)
-- **Norðurlandaólympíuleikarnir í forritun** - Háskólinn í Reykjavík - 5. mars kl 12:00 - 17:00
-- [**Forritunarkeppni Framhaldsskólanna** - Háskólinn í Reykjavík - 8. mars](https://www.ru.is/namid/hr-plus/forritunarkeppni-framhaldsskolanna)
-- **Eystrasaltsólympíuleikarnir í forritun** - Pólland - 24. - 29. apríl
-- **Evrópsku ólympíuleikar stelpna í forritun** - Bonn, Þýskaland - 14. - 20. júlí
-- [**Alþjóðlegu ólympíuleikarnir í forritun** - La Paz, Bólivía - 27. júlí - 3. ágúst](https://ioi2025.bo/)
-- **Evrópsku ólympíuleikar grunnskólanema í forritun** - Shumen, Búlgaría - 29. ágúst - 4. september
-- **Forritunarkeppni háskólanna á Íslandi** - Háskólinn í Reykjavík - 13. september
-- **Forritunarkeppni háskólanna á norðurlöndunum** - Háskóli Íslands - 4. október
-- [**Mun kóða fyrir drykki**](https://thorehusfeldt.github.io/wcfd/) - í Nóvember
-- **Norðvestur Evrópu háskólakeppnin í forritun** - Karlsruhe, Þýskalandi - 28. - 30. nóvember
+- **Skot og Skil / Shot and Submit með /sys/tur** - Next Level Gaming - 30. janúar
+- [**Kynning á UTmessunni** - Harpan - 6. og 7. febrúar](https://utmessan.is/)
+- [**Norðurlandaólympíuleikarnir í forritun** - Háskólinn í Reykjavík - 19. mars](https://nordic.progolymp.se/)
+- [**Forritunarkeppni Framhaldsskólanna** - Háskólinn í Reykjavík - 7. mars](https://www.ru.is/namid/hr-plus/forritunarkeppni-framhaldsskolanna)
+- [**Eystrasaltsólympíuleikarnir í forritun** - Espoo, Finnland - 15. - 19. apríl](https://boi2026.cses.fi/)
+- [**Evrópsku ólympíuleikar stelpna í forritun** - Cesenatico, Ítalía - 12. - 18. maí](https://egoi2026.it/)
+- **Evrópsku ólympíuleikar grunnskólanema í forritun** - Kaunas, Litháen - 24. - 30. júlí
+- [**Alþjóðlegu ólympíuleikarnir í forritun** - Tashkent, Úsbekistan - 9. - 16. ágúst](https://ioi2026.uz/)
+- **Forritunarkeppni háskólanna á Íslandi** - Háskólinn í Reykjavík - fyrri hluta september
+- [**Forritunarkeppni háskólanna á norðurlöndunum** - Háskóli Íslands - 3. október](https://nordic.icpc.io/)
+- [**Norðvestur Evrópu háskólakeppnin í forritun** - Karlsruhe, Þýskalandi - lok nóvember](https://2026.nwerc.eu/)
